--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "classnames-loader": "^2.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-proptypes": "^1.0.0",
     "react-scripts": "3.3.0",
-    "serialize-javascript": "^2.1.1"
+    "serialize-javascript": "^2.1.1",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
